# module_1_nlp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/dataset_doc/dataset_doc/test/1401.0727/: 2.tar_1401.0727.gz_draft_disorder_BLG_18_wr_0.json  2.tar_1401.0727.gz_draft_disorder_BLG_18_wr_1.json
data/dataset_doc/dataset_doc/test/1401.0747/: 2.tar_1401.0747.gz_wycech_Meson13_0.json  2.tar_1401.0747.gz_wycech_Meson13_1.json  2.tar_1401.0747.gz_wycech_Meson13_6.json
data/dataset_doc/dataset_doc/test/1401.0807/: 2.tar_1401.0807.gz_JFM_Diphasic_0.json  2.tar_1401.0807.gz_JFM_Diphasic_1.json  2.tar_1401.0807.gz_JFM_Diphasic_10.json  2.tar_1401.0807.gz_JFM_Diphasic_13.json  2.tar_1401.0807.gz_JFM_Diphasic_14.json  2.tar_1401.0807.gz_JFM_Diphasic_15.json  2.tar_1401.0807.gz_JFM_Diphasic_19.json  2.tar_1401.0807.gz_JFM_Diphasic_6.json
data/dataset_doc/dataset_doc/test/1401.0851/: 2.tar_1401.0851.gz_arxiv_os14_0.json  2.tar_1401.0851.gz_arxiv_os14_12.json  2.tar_1401.0851.gz_arxiv_os14_15.json  2.tar_1401.0851.gz_arxiv_os14_31.json  2.tar_1401.0851.gz_arxiv_os14_4.json  (+1 more)
results/: 1401.6508.txt  1409.0406.txt  1501.05775.txt  1507.00662.txt  1601.05219.txt  1606.03245.txt  1701.04496.txt  1804.06891.txt
results/api/config/: configuration.json
results/labeled/: 1401.6508.json  1409.0406.json  1501.05775.json  1507.00662.json  1601.05219.json  1606.03245.json  1701.04496.json  1804.06891.json
scripts/: convert_to_docbank.py
src/: app.py  model.py  pawls_preprocess.py
test/: test_labeling.py  test_text.py
(+3813 files in other folders)
