[tool.poetry]
name = "nlp-course"
version = "0.1.0"
description = "Practical materials for an educational course in Natural Language Processing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
transformers = "^4.37.2"

pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pandas = "^2.2.0"

[tool.poetry.group.classification.dependencies]
#add dependencies to this group with `poetry add new_package --group classification`
datasets = "^2.17.0"
scikit-learn = "^1.4.0"
unidecode = "^1.3.8"
contractions = "^0.1.73"
nltk = "^3.8.1"
xgboost = "^2.0.3"
accelerate = "^0.27.2"

[tool.poetry.group.ner.dependencies]
#add dependencies to this group with `poetry add new_package --group ner`
evaluate = "^0.4.1"
seqeval = "^1.2.2"

[tool.poetry.group.search.dependencies]
#add dependencies to this group with `poetry add new_package --group search`
sentence-transformers = "^2.3.1"
langchain = "^0.1.8"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pymilvus = "^2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
